--- a/src/posts/templates/posts/blogpost_detail.html
+++ b/src/posts/templates/posts/blogpost_detail.html
@@ -7,6 +7,7 @@
 {% block content %}
     <article class="post-detail">
         <h1>{{ post.title }}</h1>
-        <div>{{ post.content|linebreaks|safe }}</div>
+        <img src="{{ post.thumbnail.url }}" alt="L'image de l'article">
+        <div>{{ post.content|safe }}</div>
     </article>
 {% endblock %}
