--- a/src/posts/templates/posts/blogpost_detail.html
+++ b/src/posts/templates/posts/blogpost_detail.html
@@ -7,6 +7,7 @@
 {% block content %}
     <article class="post-detail">
         <h1>{{ post.title }}</h1>
+        <img src="{{ post.thumbnail.url }}" alt="Image titre">
         <div>{{ post.content|linebreaks|safe }}</div>
     </article>
 {% endblock %}
